<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

            <!--android:enabled="false"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_view_item_margin"
                android:text="@string/select_type"
                android:gravity="center"
                android:textSize="18sp"/>

            <!--android:enabled="false"-->
            <Button
                android:id="@+id/btnTakePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:text="@string/take_new_photo" />

            <Button
                android:id="@+id/btnOpenGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:text="@string/choose_from_gallery" />

</LinearLayout>
