<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. kazi srabon. Contact : kaziiit@gmail.com
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:signature="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray">

    <EditText
        android:id="@+id/editInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/comment"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="4"
        android:textColor="@color/white"
        android:textColorHint="@color/ampm_text_color"
        android:textSize="@dimen/title_text"/>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:paddingTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="1">

            <!--android:enabled="false"-->
            <Button
                android:id="@+id/btnClearComment"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_view_item_margin"
                android:text="@string/clear_review"
                android:textColor="@color/black"
                android:background="@drawable/mybutton" />

            <!--android:enabled="false"-->
            <Button
                android:id="@+id/btnOkComment"
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_view_item_margin"
                android:text="@string/button_submit"
                android:textColor="@color/black"
                android:background="@drawable/mybutton" />

            <Button
                android:id="@+id/btnCancelComment"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/list_view_item_margin"
                android:text="@android:string/cancel"
                android:textColor="@color/black"
                android:background="@drawable/mybutton" />

        </LinearLayout>

</LinearLayout>
