<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. kazi srabon. Contact : kaziiit@gmail.com
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ks.ecmanager.ecouriermanager.activities.initLayer.ActivityLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_linear_gradient"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightColorPrimary100"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="7dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_password"
                    android:text=""
                    android:imeOptions="actionDone"
                    android:inputType="textWebPassword"
                    android:padding="7dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:background="@color/list_row_hover_end_color"
                android:text="@string/button_login"
                android:textColor="@color/white"
                android:elevation="@dimen/cardview_default_elevation"
                tools:targetApi="honeycomb" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/copyright"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
